# eightctl-modal

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
src/eightctl_web/: __init__.py  app.py  auth.py  config.py  models.py  service.py
src/eightctl_web/templates/: dashboard.html  login.html
tests/: test_app.py
